--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# =============================================================================
+# PROJECT
+# =============================================================================
+
+# pre-commit hooks
+.ruff_cache/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
